News List screen POC implementation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">PADC-SFC-News</string>
     <string name="action_settings">Settings</string>
+
+    <string name="dummy_news">မေယုတောင်အရှေ့ဘက် ဘူးသီးတောင်-အငူမော်လမ်းမကြီးအား ပြန်လည်ပြုပြင်ခြင်းများ စတင်ဆောင်ရွက်နေပြီး တံတားဆောက်လုပ်မည့် အတိုင်းအတာ၊ တံတားအူကြောင်း ရွေးချယ်ခြင်းများကို တာဝန်ရှိသူများ ကွင်းဆင်းစစ်ဆေးခဲ့ကြောင်း</string>
+    <string name="btn_comment_news">Comment</string>
+    <string name="btn_send_to_news">Send To</string>
 </resources>
