--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,18 @@
     <string name="dummy_news">မေယုတောင်အရှေ့ဘက် ဘူးသီးတောင်-အငူမော်လမ်းမကြီးအား ပြန်လည်ပြုပြင်ခြင်းများ စတင်ဆောင်ရွက်နေပြီး တံတားဆောက်လုပ်မည့် အတိုင်းအတာ၊ တံတားအူကြောင်း ရွေးချယ်ခြင်းများကို တာဝန်ရှိသူများ ကွင်းဆင်းစစ်ဆေးခဲ့ကြောင်း</string>
     <string name="btn_comment_news">Comment</string>
     <string name="btn_send_to_news">Send To</string>
+
+    <string name="dummy_news_details">ရေရှည်တည်တံ့သည့် ဖွံ့ဖြိုးတိုးတက်မှုရရှိရန် e-Government ၏ အခန်းကဏ္ဍသည် အလွန်အရေးကြီးကြောင်း ပို့ဆောင်ရေးနှင့် ဆက်သွယ်ရေးဝန်ကြီးဌာန ပြည်ထောင်စုဝန်ကြီး ဦးသန့်စင်မောင်က ပြောကြားသည်။
+
+
+နိုဝင်ဘာ ရ ရက်က နေပြည်တော်ရှိ MICC-2 (မြန်မာအပြည်ပြည်ဆိုင်ရာ ကွန်ဗင်းရှင်းစင်တာ- ၂) တွင်ကျင်းပသည့် e-Government Conference and ICT Exhibition 2017 အခမ်းအနားတွင် ပို့ဆောင်ရေးနှင့် ဆက်သွယ်ရေးဝန်ကြီးဌာန ပြည်ထောင်စုဝန်ကြီး ဦးသန့်စင်မောင်က အဖွင့်အမှာစကား ပြောကြားရာတွင် အထက်ပါကဲ့သို့ ထည့်သွင်းပြောကြားခဲ့ခြင်းဖြစ်သည်။
+“e-Government ကိုဆောင်ရွက်ရတဲ့ ရည်ရွယ်ချက်က အစိုးရနဲ့ ပြည်သူအကြား၊ အစိုးရနဲ့ စီးပွားရေးလုပ်ငန်းများ၊ အစိုးရဌာနအချင်းချင်းအကြား ဆက်ဆံဆောင်ရွက်တဲ့ကိစ္စတွေ လွယ်ကူကောင်းမွန်လာစေဖို့ ဖြစ်ပါတယ်။ ရေရှည်တည်တံ့တဲ့ ဖွံ့ဖြိုးတိုးတက်မှုကိုရရှိဖို့ e-Government ရဲ့အခန်းကဏ္ဍက အလွန်အရေးကြီးပါတယ်။ e-Government ကဏ္ဍတိုးတက်မှုမရှိရင် ပြည့်စုံတဲ့တိုင်းပြည် ဖွံ့ဖြိုးတိုးတက်မှုလည်း မဖြစ်နိုင်ပါဘူး” ဟု ပြည်ထောင်စုဝန်ကြီး ဦးသန့်စင်မောင်က ပြောကြားသည်။
+
+ထို့ပြင် မြန်မာနိုင်ငံ၏ e-Government ဖွံ့ဖြိုးတိုးတက်လာရန် စွမ်းဆောင်ပေးမည့် အဓိကအထောက်အကူပြုသည့် နည်းပညာအသုံးချမှု၊ လုပ်ငန်းဆောင်ရွက်မှု လုပ်ငန်းစဉ်များနှင့် စီမံကိန်းခန့်ခွဲမှုတို့အား ဌာနများမှ ပြန်လည်သုံးသပ်ပြုပြင်ကြရမည်ဖြစ်ပြီး စီမံခန့်ခွဲမှုအပိုင်းသည် အရေးအကြီးဆုံးဖြစ်ကြောင်း ပြည်ထောင်စုဝန်ကြီးက ဆိုသည်။
+
+၎င်း “e-Government လုပ်ငန်းများကို ဦးစီးဦးဆောင်တဲ့နေရာမှာ စနစ်တကျစီမံခန့်ခွဲမှုလိုအပ်ပြီး လက်ရှိဆောင်ရွက်နေတဲ့ လုပ်ငန်းပုံစံတချို့ကိုလည်း ပြန်လည်သုံးသပ်ဖို့ ပိုမိုကောင်းမွန်တဲ့၊ ပိုမိုမြန်ဆန်တဲ့ပုံစံမျိုးကို ပြောင်းလဲဖို့က နည်းပညာထက် အရေးကြီးတယ်ဆိုတာ ပြောကြားချင်ပါတယ်။ နည်းပညာတွေကောင်းပြီး လူတွေကမပြောင်းလဲရင် တိုးတက်မှုရဖို့ဆိုတာ ဘယ်တော့မှဖြစ်လာမှာ မဟုတ်ပါဘူး” ဟု ၎င်းက ဆက်လက်ပြောကြားသည်။
+
+အဆိုပါ ညီလာခံကျင်းပခြင်းသည် အစိုးရ၏ လုပ်ငန်းလုပ်ဆောင်မှုများ လျင်မြန်လာစေရန်၊ လုပ်ငန်းများ ပိုမိုထိရောက်တွင်ကျယ်စေရန်၊ ၀န်ဆောင်မှုပေးရာတွင် တိုးတက်ကောင်းမွန်လာစေရန်၊ ပြည်သူများ၏ လိုအပ်ချက်ကို ဖြည့်ဆည်းပေးရာတွင် ပွင့်လင်းမြင်သာမှုရှိရန်နှင့် လျင်မြန်စွာဆောင်ရွက်ပေးရန်၊ သတင်းအချက်အလက်နှင့် ဆက်သွယ်ရေးနည်းပညာ (ICT) အား အသုံးချရန်လိုအပ်နေသည်ကို အသိအမှတ်ပြုခြင်းအတွက် ကျင်းပခြင်းဖြစ်ကြောင်း သိရသည်။
+
+လက်ရှိမြန်မာနိုင်ငံ၏ e-Government ညွှန်းကိန်းသည် ၂၀၁၆ ခုနှစ်တွင် နိုင်ငံပေါင်း ၁၉၃ နိုင်ငံတွင် ၁၆၉ အဆင့်ရှိကြောင်း သိရသည်။</string>
 </resources>
