Up to LoginRegisterActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
 အဆိုပါ ညီလာခံကျင်းပခြင်းသည် အစိုးရ၏ လုပ်ငန်းလုပ်ဆောင်မှုများ လျင်မြန်လာစေရန်၊ လုပ်ငန်းများ ပိုမိုထိရောက်တွင်ကျယ်စေရန်၊ ၀န်ဆောင်မှုပေးရာတွင် တိုးတက်ကောင်းမွန်လာစေရန်၊ ပြည်သူများ၏ လိုအပ်ချက်ကို ဖြည့်ဆည်းပေးရာတွင် ပွင့်လင်းမြင်သာမှုရှိရန်နှင့် လျင်မြန်စွာဆောင်ရွက်ပေးရန်၊ သတင်းအချက်အလက်နှင့် ဆက်သွယ်ရေးနည်းပညာ (ICT) အား အသုံးချရန်လိုအပ်နေသည်ကို အသိအမှတ်ပြုခြင်းအတွက် ကျင်းပခြင်းဖြစ်ကြောင်း သိရသည်။
 
 လက်ရှိမြန်မာနိုင်ငံ၏ e-Government ညွှန်းကိန်းသည် ၂၀၁၆ ခုနှစ်တွင် နိုင်ငံပေါင်း ၁၉၃ နိုင်ငံတွင် ၁၆၉ အဆင့်ရှိကြောင်း သိရသည်။</string>
+    <string name="msg_generic_no_data">No Data to Display</string>
+    <string name="lbl_refresh">Refresh</string>
 </resources>
