After integrating data layer & network layer.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,12 @@
 လက်ရှိမြန်မာနိုင်ငံ၏ e-Government ညွှန်းကိန်းသည် ၂၀၁၆ ခုနှစ်တွင် နိုင်ငံပေါင်း ၁၉၃ နိုင်ငံတွင် ၁၆၉ အဆင့်ရှိကြောင်း သိရသည်။</string>
     <string name="msg_generic_no_data">No Data to Display</string>
     <string name="lbl_refresh">Refresh</string>
+    <string name="btn_forgot_password"><u><i>Forgot Password</i></u></string>
+    <string name="btn_to_register"><u><i>New User ? Register</i></u></string>
+
+    <string name="lbl_navigate_to_login"><u><i>Already have account ?</i></u></string>
+    <string name="hint_enter_phone">Your Phone</string>
+    <string name="hint_enter_email">Your Email</string>
+    <string name="hint_enter_password">Password</string>
+    <string name="lbl_mark_my_home_on_google_map"><u><i>Mark my home on Google Map</i></u></string>
 </resources>
