After writing to Firebase Realtime DB.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
     <string name="lbl_mark_my_home_on_google_map"><u><i>Mark my home on Google Map</i></u></string>
 
     <string name="format_news_statistical_data"><xliff:g id="like_count">%1$d</xliff:g> Likes - <xliff:g id="comment_count">%2$d</xliff:g> Comments and Sent to <xliff:g id="sent_count">%3$d</xliff:g> people</string>
+    <string name="lbl_add_photo">သတင်းဓါတ်ပုံ</string>
+    <string name="btn_add_news">Publish</string>
+    <string name="screen_title_add_news">Publish News</string>
 </resources>
